--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "@mui/material": "^5.11.5",
     "daisyui": "^2.47.0",
     "flowbite": "^1.6.2",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "tailwind-scrollbar-hide": "^1.1.7",
-
     "three": "^0.148.0",
-
     "web-vitals": "^2.1.4"
   },
   "scripts": {
