--- a/backend-sdk/package.json
+++ b/backend-sdk/package.json
@@ -2,6 +2,7 @@
   "name": "backend-sdk",
   "version": "1.0.0",
   "main": "index.js",
+  "type":"module",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -9,9 +10,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.1"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js"
   }
 }
