--- a/backend-sdk/package.json
+++ b/backend-sdk/package.json
@@ -2,15 +2,20 @@
   "name": "backend-sdk",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2"
   },
   "scripts": {
     "dev": "nodemon server.js"
