--- a/frontend-sdk/package.json
+++ b/frontend-sdk/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@heroicons/react": "^2.0.16",
     "@mui/material": "^5.11.5",
+    "axios": "^1.3.4",
     "daisyui": "^2.47.0",
     "flowbite": "^1.6.2",
     "react": "^18.2.0",
