--- a/backend-sdk/package.json
+++ b/backend-sdk/package.json
@@ -13,6 +13,8 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
+    "nodemo": "^1.0.0",
+    "nodemon": "^2.0.21",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2"
