--- a/frontend-sdk/package.json
+++ b/frontend-sdk/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.4",
     "daisyui": "^2.47.0",
     "flowbite": "^1.6.2",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
