--- a/frontend-sdk/package.json
+++ b/frontend-sdk/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "three": "^0.148.0",
     "web-vitals": "^2.1.4"
